k8s/base/financial-predictor-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: seldon-gateway
  namespace: seldon-mesh
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - financial-predictor.local

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: seldon-vs
  namespace: seldon-mesh
spec:
  hosts:
  - financial-predictor.local
  gateways:
  - seldon-gateway
  http:
  - route:
    - destination:
        host: seldon-mesh-financial-ab-test-experiment
        port:
          number: 9000
